force-app/main/default/objects/copado__User_Story_Bundle__c/copado__User_Story_Bundle__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED</description>
    <label>DEPRECATED</label>
    <nameField>
        <displayFormat>USB-{0000000}</displayFormat>
        <label>User Story Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DEPRECATED</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>