force-app/main/default/objects/copado__User_Story_Bundle__c/fields/copado__Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>copado__Status_Notes__c</fullName>
    <label>Status Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>